Update WriteObject*;TestNetwork;TestNetworkResolution